--- a/_header.html
+++ b/_header.html
@@ -1,7 +1,7 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial=scale=1.0, maximum-scale=1.0, user-scalable=no" />
 <meta name="apple=mobile-web-app-capable" content="yes" />
-<title>%%title</title>
+<title>Web</title>
 <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" />
 <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet" />
 <!-- Latest compiled and minified CSS -->
