--- a/html/index.html
+++ b/html/index.html
@@ -17,6 +17,7 @@
                     </div>
                     <div class="icon-show-menu"></div>
                     <div class="nav-toolbar-container">
+                        <div class="icon-close"></div>
                         <div class="nav-menu">
                             <ul>
                                 <li class="nav-item"><a href="#">products</a>
