--- a/html/index.html
+++ b/html/index.html
@@ -30,7 +30,7 @@
                                 </li>
                             </ul>
                         </div>
-                        <div class="lang"><a href="#" class="nav-item">En</a>
+                        <div class="lang"><a href="#" class="nav-lang">En</a>
                             <ul class="lang-list">
                                 <li><a href="#" class="lang-item">en</a>
                                 </li>
