--- a/html/index.html
+++ b/html/index.html
@@ -187,34 +187,34 @@
                     <div class="col-xs-4 col-xs-offset-1">
                         <div class="business-cards">
                             <div data-attr="1" class="business-card-item card-item-1">
-                                <img src="/images/card-1.png" />
+                                <img src="images/card-1.png" />
                             </div>
                             <div data-attr="2" class="business-card-item card-item-2">
-                                <img src="/images/card-2.png" />
+                                <img src="images/card-2.png" />
                                 <p>2</p>
                             </div>
                             <div data-attr="3" class="business-card-item card-item-3">
-                                <img src="/images/card-3.png" />
+                                <img src="images/card-3.png" />
                                 <p>3</p>
                             </div>
                             <div data-attr="4" class="business-card-item card-item-4">
-                                <img src="/images/card-4.png" />
+                                <img src="images/card-4.png" />
                                 <p>4</p>
                             </div>
                             <div data-attr="5" class="business-card-item card-item-5">
-                                <img src="/images/card-5.png" />
+                                <img src="images/card-5.png" />
                                 <p>5</p>
                             </div>
                             <div data-attr="6" class="business-card-item card-item-6">
-                                <img src="/images/card-6.png" />
+                                <img src="images/card-6.png" />
                                 <p>6</p>
                             </div>
                             <div data-attr="7" class="business-card-item card-item-7">
-                                <img src="/images/card-7.png" />
+                                <img src="images/card-7.png" />
                                 <p>7</p>
                             </div>
                             <div data-attr="8" class="business-card-item card-item-8">
-                                <img src="/images/card-8.png" />
+                                <img src="images/card-8.png" />
                                 <p>8</p>
                             </div>
                         </div>
