--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
             <div class="nav">
                 <div class="allnav">
                     <div class="logo">
-                        <img src="images/logo.png" class="lol" />
+                        <a href="/">
+                            <img src="images/logo.png" class="lol" />
+                        </a>
                     </div>
                     <div class="icon-show-menu"></div>
                     <div class="nav-toolbar-container">
