--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="nav">
                 <div class="allnav">
                     <div class="logo">
-                        <a href="/">
+                        <a href="/test">
                             <img src="images/logo.png" class="lol" />
                         </a>
                     </div>
