Update recent news and images

--- a/index.html
+++ b/index.html
@@ -235,6 +235,93 @@
                 </div>
             </div>
         </div>
+        <div class="news-section">
+            <div class="container">
+                <div class="row">
+                    <div class="news-header">
+                        <div class="col-lg-4">
+                            <h3 class="section-title">Recent news</h3>
+                            <div class="arrow-right">
+                                <a href="#">
+                                    <img src="images/arrow-right.png" />
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-lg-offset-5">
+                            <div class="section-news-btn"><a href="#" class="btn-primary">Subscribe for newsletter</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="new-list">
+                        <div class="col-lg-6">
+                            <div class="list-major">
+                                <a href="#">
+                                    <div class="img-container">
+                                        <img src="images/news-image.jpg" />
+                                    </div>
+                                    <div class="news-description">
+                                        <div class="gray-letter">
+                                            <h3 class="news-title">Company becomes the General Partner <br> of the eCom21 conference</h3>
+                                            <p class="news-description-text">Company, the most advanced processing centre in the Baltic States and a provider of end-to-end solutions for payment processing, internet acquiring and ...</p><span class="news-date">04 sept 2017</span>
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-lg-6">
+                            <div class="list-second">
+                                <div class="list-item">
+                                    <a href="#" class="news-box">
+                                        <div class="news-box-image">
+                                            <img src="images/news-image-2.jpg" />
+                                        </div>
+                                        <div class="news-box-description">
+                                            <h3 class="news-title">The first FinTech Club meeting held in Riga</h3>
+                                            <p class="news-date">04 sept 2017</p>
+                                        </div>
+                                    </a>
+                                </div>
+                                <div class="list-item">
+                                    <a href="#" class="news-box">
+                                        <div class="news-box-image">
+                                            <img src="images/news-image-1.jpg" />
+                                        </div>
+                                        <div class="news-box-description">
+                                            <h3 class="news-title">The second FinTech Club meeting held in Riga</h3>
+                                            <p class="news-date">04 sept 2017</p>
+                                        </div>
+                                    </a>
+                                </div>
+                                <div class="list-item">
+                                    <a href="#" class="news-box">
+                                        <div class="news-box-image">
+                                            <img src="images/news-image-3.jpg" />
+                                        </div>
+                                        <div class="news-box-description">
+                                            <h3 class="news-title">The third FinTech Club meeting held in Riga</h3>
+                                            <p class="news-date">03 sept 2017</p>
+                                        </div>
+                                    </a>
+                                </div>
+                                <div class="list-item">
+                                    <a href="#" class="news-box">
+                                        <div class="news-box-image">
+                                            <img src="images/news-image-2.jpg" />
+                                        </div>
+                                        <div class="news-box-description">
+                                            <h3 class="news-title">The fourth FinTech Club meeting held in Riga</h3>
+                                            <p class="news-date">03 sept 2017</p>
+                                        </div>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </body><footer class="footer">
     <div class="container">
