add footer in web-site

--- a/index.html
+++ b/index.html
@@ -324,9 +324,73 @@
         </div>
     </div>
 </body><footer class="footer">
-    <div class="container">
-        <div class="row">
-            <p class="copyright">Copyright © 2017 Test | Anenii - Noi.</p>
+    <div class="footer-list-label">
+        <div class="footer-label-items">
+            <div class="footer-list-item">
+                <a href="#">
+                    <img src="images/fca.png" />
+                </a>
+            </div>
+            <div class="footer-list-item">
+                <a href="#">
+                    <img src="images/pci.png" />
+                </a>
+            </div>
+            <div class="footer-list-item">
+                <a href="#">
+                    <img src="images/mastercard.png" />
+                </a>
+            </div>
+            <div class="footer-list-item">
+                <a href="#">
+                    <img src="images/visa.png" />
+                </a>
+            </div>
+            <div class="footer-list-item">
+                <a href="#">
+                    <img src="images/3dsecure.png" />
+                </a>
+            </div>
+        </div>
+        <div class="footer-toolbar">
+            <div class="container">
+                <div class="footer-toolbar-nav">
+                    <ul class="footer-nav">
+                        <li><a href="#" class="nav-item">About us</a>
+                        </li>
+                        <li><a href="#" class="nav-item">Contact us</a>
+                        </li>
+                        <li><a href="#" class="nav-item">Terms</a>
+                        </li>
+                        <li><a href="#" class="nav-item">Privacy policy</a>
+                        </li>
+                        <li><a href="#" class="nav-item">Cookie policy</a>
+                        </li>
+                        <li><a href="#" class="nav-item">Partners</a>
+                        </li>
+                        <li><a href="#" class="nav-item">Careers</a>
+                        </li>
+                        <li>
+                            <a href="#" class="search-mb">
+                                <img src="images/search-icon.png" />
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="footer-toolbar-search"></div>
+            </div>
+        </div>
+        <div class="footer-description">
+            <div class="container">
+                <p class="description">All rights reserved. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                <p class="copyright">&copy; 2017</p>
+                <div class="footer-logo">
+                    <a href="#">
+                        <img src="images/scada.png" />
+                    </a>
+                </div>
+            </div>
         </div>
     </div>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
