--- a/html/index.html
+++ b/html/index.html
@@ -70,12 +70,6 @@
                 <ul class="slides">
                     <li>
                         <div class="solid-bg">
-                            <h6>Pimp your <br> ride</h6>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="solid-bg">
                             <h6>Solving your <br> problems</h6>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
                         </div>
@@ -89,6 +83,12 @@
                     <li>
                         <div class="solid-bg">
                             <h6>Solving your <br> problems</h6>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="solid-bg">
+                            <h6>Pimp your <br> ride</h6>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
                         </div>
                     </li>
@@ -107,11 +107,11 @@
         <div class="develop-section">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-6 col col-md12">
+                    <div class="col-lg-6 col col-md-12 col-xs-12">
                         <h3 class="section-title">A complete toolkit for developers</h3>
                     </div>
-                    <div class="col-lg-4 col-lg-offset-2 col col-md-12">
-                        <h3 class="section-second-tit-isle">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut</h3>
+                    <div class="col-lg-4 col-lg-offset-2 col-xs-12 col-md-12">
+                        <h3 class="section-second-title">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut</h3>
                     </div>
                 </div>
                 <div class="row">
