--- a/html/index.html
+++ b/html/index.html
@@ -110,7 +110,7 @@
                     <div class="col-lg-6 col col-md-12 col-xs-12">
                         <h3 class="section-title">A complete toolkit for developers</h3>
                     </div>
-                    <div class="col-lg-4 col-lg-offset-2 col-xs-12 col-md-12">
+                    <div class="col-lg-4 col-xs-12 col-md-12">
                         <h3 class="section-second-title">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut</h3>
                     </div>
                 </div>
